force-app/main/default/objects/Card__c/fields/Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bank Account Name</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Cards</relationshipLabel>
    <relationshipName>Cards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>