force-app/main/default/objects/Card__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Card Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Transaction_Type__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Transaction_Type__c</referenceTo>
    <relationshipLabel>Cards</relationshipLabel>
    <relationshipName>Cards</relationshipName>
    <type>Lookup</type>
</CustomField>